[package]
name = "ssh-key-sign"
version = "0.1.0"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"

[dependencies]
ring = "0.16.12"
untrusted = "0.7.0"
base64 = "0.12.0"
byteorder = "1.3.4"
openssl = { version = "0.10.29", optional = true }
hex = { version = "0.4.2", optional = true }

[dev-dependencies]
spectral = "0.6.0"
tempfile = "3.1.0"
rand = "0.7.3"

[features]
with-private = ["openssl", "hex"]
