[package]
name = "ssh-key-sign"
version = "0.1.0"
authors = ["Bodo Junglas <junglas@objectcode.de>"]
edition = "2018"

[dependencies]
ring = "0.16"
untrusted = "0.7"
base64 = "0.12"
byteorder = "1"
openssl = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
spectral = "0.6.0"
tempfile = "3.1.0"
rand = "0.7"

[features]
with-private = ["openssl", "hex"]
